--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,5 +1,9 @@
-/* static/css/style.css */
+/* # app.py
+# Copyright (c) 2025 Marcos Paulo Dos santos
+# Este ficheiro é parte do projeto "Redução de Ruído de Áudio em Vídeos".
+# Todos os direitos reservados.*/
 
+/* static/css/style.css */
 /* --- ESTILOS GERAIS --- */
 body {
     font-family: 'Inter', sans-serif;
